k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "true"
    # kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.allow-http: "true"  
    kubernetes.io/ingress.global-static-ip-name: "argocd-ip"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-ingress
spec:
  rules:
  - http:    
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 80
        path: /*
  - http:    
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 443
        path: /*        
  # backend:
  #   serviceName: argocd-server
  #   servicePort: 80
